public/css/style.css
* {
    box-sizing: border-box;
}

body {
    font-family: 'Fauna One', serif;
    background-image: url("https://i.imgur.com/DxzTVst.jpg");
    background-size: cover;
    background-repeat: no-repeat;
    min-height: 100vh;
}

header {
    display: flex;
    color: white;
}

h1 {
    font-size: 60px;
    font-family: 'Lobster Two', cursive;
    text-shadow: 3px 3px #ff7300;
    justify-self: start;
}

nav {
    justify-self: end;
}

.paragraph-wrapper {
    min-height: 55%;
    display: flex;
    justify-content: center;
    align-items: center;
}

.landing-title {
    padding: 10px 10px 0 10px;
}

.about-vino-italiano {
    text-align: center;
    width: 70%;
}

.full-para {
    border-radius: 25px;
    color: white;
    background-color: rgba(0, 0, 0, 0.514);
}

.landing-para {
    padding: 10px;
    font-size: 20px;
    margin-bottom: 40px;
}

footer {
    position: sticky;
    display: flex;
    flex-direction: column;
    align-items: center;
    top: 100vh;
    margin-top: 30px;
    padding-top: 20px;
    color: white;
}

.footer-div {
    margin-top: 10px;
    margin-bottom: 25px;
}

